<?xml version="1.0" encoding="utf-8"?>
<ExtensionInfo
    displayName="@string/extension_name"
    icon="@drawable/ic_ksafe"
    id="ksafe"
    scansDevices="false">
    <BonusAction
        actionId="cancel-emergency"
        displayName="@string/action_cancel_emergency" />
    <BonusAction
        actionId="send-custom-message"
        displayName="@string/action_send_custom_message" />
    <BonusAction
        actionId="trigger-webhook-1"
        displayName="@string/action_webhook_1" />
    <BonusAction
        actionId="trigger-webhook-2"
        displayName="@string/action_webhook_2" />
    <DataType
        description="@string/sos_datatype_desc"
        displayName="@string/sos_datatype_name"
        graphical="true"
        icon="@drawable/ic_ksafe"
        typeId="sos-field" />
    <DataType
        description="@string/timer_datatype_desc"
        displayName="@string/timer_datatype_name"
        graphical="true"
        icon="@drawable/ic_ksafe"
        typeId="timer-field" />
    <DataType
        description="@string/custom_message_datatype_desc"
        displayName="@string/custom_message_datatype_name"
        graphical="true"
        icon="@drawable/ic_ksafe"
        typeId="custom-message-field" />
    <DataType
        description="@string/custom_message_datatype_desc"
        displayName="@string/custom_message_2_datatype_name"
        graphical="true"
        icon="@drawable/ic_ksafe"
        typeId="custom-message-field-2" />
    <DataType
        description="@string/custom_message_datatype_desc"
        displayName="@string/custom_message_3_datatype_name"
        graphical="true"
        icon="@drawable/ic_ksafe"
        typeId="custom-message-field-3" />
    <DataType
        description="@string/webhook_datatype_desc"
        displayName="@string/webhook_1_datatype_name"
        graphical="true"
        icon="@drawable/ic_ksafe"
        typeId="webhook-field-1" />
    <DataType
        description="@string/webhook_datatype_desc"
        displayName="@string/webhook_2_datatype_name"
        graphical="true"
        icon="@drawable/ic_ksafe"
        typeId="webhook-field-2" />
    <DataType
        description="@string/carb_log_datatype_desc"
        displayName="@string/carb_log_1_datatype_name"
        graphical="true"
        icon="@drawable/ic_ksafe"
        typeId="carb-log-1" />
    <DataType
        description="@string/carb_log_datatype_desc"
        displayName="@string/carb_log_2_datatype_name"
        graphical="true"
        icon="@drawable/ic_ksafe"
        typeId="carb-log-2" />
    <DataType
        description="@string/carb_log_datatype_desc"
        displayName="@string/carb_log_3_datatype_name"
        graphical="true"
        icon="@drawable/ic_ksafe"
        typeId="carb-log-3" />
    <DataType
        description="@string/carb_status_datatype_desc"
        displayName="@string/carb_status_datatype_name"
        graphical="true"
        icon="@drawable/ic_ksafe"
        typeId="carb-status" />
    <DataType
        description="@string/hyd_log_datatype_desc"
        displayName="@string/hyd_log_1_datatype_name"
        graphical="true"
        icon="@drawable/ic_ksafe"
        typeId="hyd-log-1" />
    <DataType
        description="@string/hyd_log_datatype_desc"
        displayName="@string/hyd_log_2_datatype_name"
        graphical="true"
        icon="@drawable/ic_ksafe"
        typeId="hyd-log-2" />
    <DataType
        description="@string/hyd_status_datatype_desc"
        displayName="@string/hyd_status_datatype_name"
        graphical="true"
        icon="@drawable/ic_ksafe"
        typeId="hyd-status" />
    <BonusAction
        actionId="log-carb-1"
        displayName="@string/action_log_carb" />
    <BonusAction
        actionId="log-drink-1"
        displayName="@string/action_log_drink" />
</ExtensionInfo>
